correction yaml + controllers
